--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "../node_modules/bulma/bulma.sass";
+html, body { height: 100%; }
+body { margin: 0}
+
 
 .alt-gradient-button {
   border: none;
