--- a/documentation/components/AppComponent.html
+++ b/documentation/components/AppComponent.html
@@ -253,7 +253,7 @@ export class AppComponent {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><router-outlet></router-outlet></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'TodosComponent', 'selector': 'app-todos'}];
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'EditModalComponent', 'selector': 'app-edit-modal'},{'name': 'TodoItemComponent', 'selector': 'app-todo-item'},{'name': 'TodosComponent', 'selector': 'app-todos'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'AppComponent'};
 </script>
